# escriptorium-fetcher

./: README.md  pyproject.toml
escriptorium_fetcher/: main.py
tests/: test_escriptorium_fetcher.py
