[tool.poetry]
name = "escriptorium-fetcher"
version = "0.1.0"
description = ""
authors = ["apjanco <apjanco@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
fetcher = "escriptorium_fetcher.main:app"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
typer = {extras = ["all"], version = "^0.9.0"}
srsly = "^2.4.8"
escriptorium-connector = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
